blockml/test/errors/03_view/e293/e293.view
view: e293
derived_table: |
  'SELECT * FROM ...'
permanent: true  
pdt_trigger_sql: |
  select * from ${unk.PDT_TABLE_REF}
fields:
- dimension: dim1
  sql: 111



